--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5",
-    "eslint": "^8",
-    "eslint-config-next": "^15.0.3"
+    "typescript": "^5"
   }
 }
